# MDUAL

./: CMakeLists.txt  README  README.md
src/MDUAL/: Cell.cpp  Cell.h  MDUAL.cpp  MDUAL.h  Utils.cpp  Utils.h  globalCell.cpp  globalCell.h
src/datasets/: README
src/loader/: DataLoader.cpp  DataLoader.h  Query.cpp  Query.h  Query.hpp  QueryLoader.cpp  QueryLoader.h  Tuple.cpp  Tuple.h
src/querysets/: EM_Q10.csv  FC.data_Q10.csv  FC_Q10.csv  HPC_Q10.csv  STK_Q10.csv  TAO_Q10.csv
src/simulator/: Measure.cpp  Measure.h  MemoryThread.cpp  MemoryThread.hpp  QueryGenerator.cpp  QueryGenerator.h  QueryGenerator.hpp  Simulator.cpp  Simulator.hpp
src/test/: NAIVE.cpp  autoTester.cpp  testLoad.cpp
